--- a/pooos.html
+++ b/pooos.html
@@ -89,7 +89,7 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-button">العودة</a>
+    <a href="feature1.html" class="back-button">العودة</a>
     <div class="container">
         <div class="center">
           الرقم التعريفي :83
