--- a/psss.html
+++ b/psss.html
@@ -273,7 +273,7 @@ centersData.forEach((center) => {
 </head>
 <body>
     <!-- HTML Button -->
-    <button id="returnButton">Go to Feature 1</button>
+    <button id="returnButton">Go previous page </button>
 
     <script>
         // JavaScript for Redirection
